<resources>
    <string name="app_name">TicTacToe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_records">User Records</string>
    <string name="start_game">Start Game</string>
    <string name="user_1">User 1</string>
    <string name="user_2">User 2</string>
    <string name="username">Username</string>
    <string name="start">Start</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="wins">Wins</string>
    <string name="loses">Loses</string>
    <string name="ties">Ties</string>
    <string name="main_page">Main Page</string>
    <string name="continue1">Continue</string>
</resources>